	    featureDecorrelation for the estimation of an outcome-steered decorrelated dataframe
		filteredFit with normalization and PCA
	Bugs:
	-Try added to prediction, to avoid crashing errors.
	Minor Changes:
	-FRESAScale OrderLogit function nows retunrs values form -2 to 2.
	-ENS changed to ensemble
	-Removed par(mfrow = c(1,1)) from code, so user has the freedom to collate plots
	
Changes from FRESA.CAD 3.0.1 to FRESA.CAD version 3.1.1

	Enhancements:
		BSWiMS now can do ordinal regression 
		New functions for cross-validation regression/ordinal and binary classification methods
		 -randomCV 
		 -RegresionBenchmark
		 -BinaryBenchmark
		 -OrdinalBenchmark
		 -predictStats
		Functions for filtering features
		 -univariate_Logit
		 -univariate_residual
		 -univariate_tstudent
		 -univariate_Wilcoxon
		 -univariate_correlation
		 -classic mRMR
		Plots:
		-barPlotCiError

	 Interface Changes:
		forward selections now requires that the user specify the original number of features for FDR adjustment.
		FDR BH p-value correction added into the forward selection algorithms: ForwardSelection.Model.Bin.R and ForwardSelection.Model.Res.R
		The adjusted p-value is used at each bootstrap to detect which features can be added to the forward models
	Code Changes:
		Forward selection now is faster for highly dimensional data sets (n>200 features) 
			Before finding the optimal feature to add, it ranks features according to the correlation to the current residual.
	Other:
		Vignettes added
		OPENMP removed from Makevars
	

Changes from FRESA.CAD 3.0.0 to FRESA.CAD version 3.0.1

	outcheck.txt was removed from the package.
	
Changes from FRESA.CAD 2.2.1 to FRESA.CAD version 3.0.0

	
	FRESA.CAD now has the ability to create gene signatures and a simple interface for BSWiMS model generation.
	The BSWiMS modeling returns a bagged model after finding a set of candidate models.
	
	Enhancements:
		New functions:
		 -BSWiMS function added
		 -getSignature function added