@@ -15,6 +15,8 @@ Changes from FRESA.CAD 3.1.1 to FRESA.CAD version 3.3.1
 	-FRESAScale OrderLogit function nows retunrs values form -2 to 2.
 	-ENS changed to ensemble
 	-Removed par(mfrow = c(1,1)) from code, so user has the freedom to collate plots
+	Requested changes.
+	-call to wilcox_free() has been added to cpp code.
 	
 Changes from FRESA.CAD 3.0.1 to FRESA.CAD version 3.1.1
 
